Success pages added

--- a/src/Styles/_global.scss
+++ b/src/Styles/_global.scss
@@ -30,3 +30,12 @@ button {
     cursor: not-allowed;
   }
 }
+
+.error {
+  padding: 10px 30px;
+  margin-bottom: 20px;
+  background-color: $error-background;
+  border: 1px solid $error;
+  @include font(14px, 500, $error);
+  display: inline-block;
+}
